# BareMetal-libc

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  clean.sh  stamp.h
doxygen/: mainpage.h
include/: errno.h  stdint.h  stdio.h  stdlib.h  string.h
include/baremetal/: baremetal.h  types.h
src/: baremetal.c  errno.c  generate-limits.c  string.c
